--- a/translations/kangyur/translations/051-001_toh113-sutra_of_the_white_lotus_of_true_dharma.xml
+++ b/translations/kangyur/translations/051-001_toh113-sutra_of_the_white_lotus_of_true_dharma.xml
@@ -4,17 +4,15 @@
     <teiHeader>
         <fileDesc>
             <titleStmt>
-                <title type="mainTitle" xml:lang="Bo-Ltn">dam pa’i chos pad ma dkar po</title>
-                <title type="mainTitle" xml:lang="bo">དམ་པའི་ཆོས་པད་མ་དཀར་པོ།</title>
                 <title type="mainTitle" xml:lang="en">The White Lotus of the Good Dharma</title>
                 <title type="mainTitle" xml:lang="Sa-Ltn">Saddharma­puṇḍarīka</title>
-                <title type="longTitle" xml:lang="bo">དམ་པའི་ཆོས་པད་མ་དཀར་པོ་ཞེས་བྱ་བ་ཐེག་པ་ཆེན་པོའི་མདོ།</title>
-                <title type="longTitle" xml:lang="Bo-Ltn">dam pa’i chos pad ma dkar po zhes bya ba
-                    theg pa chen po’i mdo</title>
-                <title type="longTitle" xml:lang="en">The Mahāyāna Sūtra “The White Lotus of the
-                    Good Dharma”</title>
+                <title type="mainTitle" xml:lang="bo">དམ་པའི་ཆོས་པད་མ་དཀར་པོ།</title>
+                <title type="mainTitle" xml:lang="Bo-Ltn">dam pa’i chos pad ma dkar po</title>
+                <title type="longTitle" xml:lang="en">The Mahāyāna Sūtra “The White Lotus of the Good Dharma”</title>
                 <title type="longTitle" xml:lang="Sa-Ltn">Saddharma­puṇḍarīka­nāma­mahāyāna­sūtra</title>
-                <title type="otherTitle" xml:lang="zh">妙法蓮華經</title>
+                <title type="longTitle" xml:lang="Bo-Ltn">dam pa’i chos pad ma dkar po zhes bya ba theg pa chen po’i mdo</title>
+                <title type="longTitle" xml:lang="bo">དམ་པའི་ཆོས་པད་མ་དཀར་པོ་ཞེས་བྱ་བ་ཐེག་པ་ཆེན་པོའི་མདོ།</title>
+                <title type="otherTitle" xml:lang="zh">《妙法蓮華經》</title>
                 <author role="translatorMain" ref="contributors.xml#team-22">Translated by Peter
                     Alan Roberts<lb/> under the patronage and supervision of 84000: Translating the
                     Words of the Buddha</author>
@@ -35,7 +33,7 @@
                 <sponsor ref="sponsors.xml#sponsor-2">May &amp; George Gu</sponsor>
             </titleStmt>
             <editionStmt>
-                <edition>v 1.2.6 <date>2022</date>
+                <edition>v 1.2.8 <date>2022</date>
                 </edition>
             </editionStmt>
             <publicationStmt status="1">
@@ -72,7 +70,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2022-05-19T14:06:28.557Z" user="admin">19/05/2022 14:06:28</note>
+                <note type="lastUpdated" date-time="2022-07-26T04:28:39.068Z" user="admin">26/07/2022 04:28:39</note>
                 <note type="updated" update="text-version" value="v 1.06" date-time="2019-03-09T18:07:31.011Z" user="john">v 1.06 2018</note>
                 <note type="updated" update="text-version" value="v 1.09" date-time="2019-04-10T07:14:09.27Z" user="john">v 1.09 2018</note>
                 <note type="updated" update="text-version" value="v 1.12" date-time="2019-06-18T16:02:50.021Z" user="celso">v 1.12 2019</note>
@@ -102,7 +100,6 @@
                 <note type="updated" update="text-version" value="1.14.4" date-time="2020-11-24T01:32:25.977Z" user="celso">Updated pending links</note>
                 <note type="updated" update="text-version" value="1.14.5" date-time="2020-12-11T14:06:50.919Z" user="admin">Auto (TEI migration
                     2.1.5)</note>
-
                 <note type="updated" update="text-version" value="1.14.6" date-time="2021-01-04T21:16:33.504Z" user="laura">Added a few missing spaces and
                     fixed Wylie for Ājñātakauṇḍinya</note>
                 <note type="updated" update="text-version" value="1.14.7" date-time="2021-02-01T11:08:13.959Z" user="line-tofte">Auto
@@ -123,16 +120,15 @@
                     bhikṣuṇī and a few corrections to glossary entries</note>
                 <note type="updated" update="text-version" value="1.2.1" date-time="2021-08-19T10:04:45.486Z" user="john">commented out preface, small
                     edits to one phrase in summary and text.</note>
-
                 <note type="updated" update="text-version" value="1.2.2" date-time="2021-11-03T17:28:29.761Z" user="celso">activated pending links</note>
-
                 <note type="updated" update="text-version" value="1.2.3" date-time="2022-01-04T21:52:12.764Z" user="celso">apsaras to apsarases</note>
-
                 <note type="updated" update="text-version" value="1.2.4" date-time="2022-02-01T07:15:57.271Z" user="andre">definition of sugata: critical
                     remark removed</note>
                 <note type="updated" update="text-version" value="1.2.5" date-time="2022-03-08T21:51:12.447Z" user="celso">Fixed some glossary
                     links</note>
                 <note type="updated" update="text-version" value="1.2.6" date-time="2022-05-19T14:06:24.577Z" user="martina-cotter">Updated milestone 24.7.</note>
+                <note type="updated" update="text-version" value="1.2.7" date-time="2022-06-27T10:06:48.1Z" user="admin">Auto (script-increment-version-published)</note>
+                <note type="updated" update="text-version" value="1.2.8" date-time="2022-07-26T04:28:36.934Z" user="cabie-sim">Auto (update-titles)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
@@ -1674,8 +1670,8 @@
                         retinue of twelve hundred Brahmakāyika devas: the brahmā Śikhin, the brahmā
                         Jyotiṣprabha, and the rest of the one thousand two hundred Brahmakāyika
                         devas.</p>
-                    <p tid="110">Also present were the eight nāga kings—the nāga kings Nanda,
-                        Upananda, Sāgara, Vāsuki, Takṣaka, Manasvin, Anavatapta, and
+                    <p tid="110">Also present were the eight nāga kings—the nāga kings <term>Nanda</term>,
+                        <term>Upananda</term>, Sāgara, Vāsuki, Takṣaka, Manasvin, Anavatapta, and
                         Utpalaka—together with a retinue of many trillions of nāgas.</p>
                     <milestone unit="chunk" xml:id="UT22084-051-001-171"/>
                     <p tid="111">Also present were the four kinnara kings—the kinnara king Druma,
@@ -22368,13 +22364,12 @@
                         </gloss>
                     </item>
                     <item>
-                        <gloss type="term" xml:id="UT22084-051-001-3316">
+                        <gloss xml:id="UT22084-051-001-3316" type="term" mode="match">
                             <term>parinirvāṇa</term>
-                            <term xml:lang="Bo-Ltn">mya ngan las ’da’</term>
-                            <term xml:lang="bo">མྱ་ངན་ལས་འདའ།</term>
+                            <term xml:lang="Bo-Ltn">yongs su mya ngan las ’da’</term>
+                            <term xml:lang="bo">ཡོངས་སུ་མྱ་ངན་ལས་འདའ།</term>
                             <term xml:lang="Sa-Ltn">parinirvāṇa</term>
-                            <term type="definition">“Complete nirvāṇa.” It can specifically refer to
-                                entering nirvāṇa at death.</term>
+                            <term type="definition">“Complete nirvāṇa.” It can specifically refer to entering nirvāṇa at death.</term>
                         </gloss>
                     </item>
                     <item>
@@ -24730,8 +24725,16 @@
                             <term xml:lang="bo">དགའ་བོ།</term>
                             <term xml:lang="Sa-Ltn">Nanda</term>
                             <term type="definition">The Buddha’s half-<term type="ignore">brother</term>, who became one of his principal pupils.</term>
-                            <term type="definition">Also the name for the nāga king usually
-                                associated with Upananda.</term>
+                        </gloss>
+                    </item>
+                    <item>
+                        <gloss type="person" xml:id="UT22084-051-001-6365" mode="marked">
+                            <term>Nanda</term>
+                            <term xml:lang="Bo-Ltn">dga’ bo</term>
+                            <term xml:lang="bo">དགའ་བོ།</term>
+                            <term xml:lang="Sa-Ltn">Nanda</term>
+                            <term type="definition">One of the eight great nāga kings. Usually
+                                paired with the nāga king Upananda.</term>
                         </gloss>
                     </item>
                     <item>
@@ -25563,12 +25566,20 @@
                             <term xml:lang="Bo-Ltn">nye dga’</term>
                             <term xml:lang="bo">ཉེ་དགའ།</term>
                             <term xml:lang="Sa-Ltn">Upananda</term>
-                            <term type="definition">One of the eight great nāga kings. Usually
-                                paired with the nāga king Nanda.</term>
-                            <term type="definition">Also the name of a bhikṣu of the Buddha’s listed
+                            <term type="definition">The name of a bhikṣu of the Buddha’s listed
                                 as being present at the sūtra’s teaching and listed along with the
                                 Buddha’s half-<term type="ignore">brother</term>, the bhikṣu
                                 Nanda.</term>
+                        </gloss>
+                    </item>
+                    <item>
+                        <gloss type="person" mode="marked" xml:id="UT22084-051-001-6366">
+                            <term>Upananda</term>
+                            <term xml:lang="Bo-Ltn">nye dga’</term>
+                            <term xml:lang="bo">ཉེ་དགའ།</term>
+                            <term xml:lang="Sa-Ltn">Upananda</term>
+                            <term type="definition">One of the eight great nāga kings. Usually
+                                paired with the nāga king Nanda.</term>
                         </gloss>
                     </item>
 
