--- a/translations/kangyur/translations/051-004_toh116_baskets_display.xml
+++ b/translations/kangyur/translations/051-004_toh116_baskets_display.xml
@@ -5,15 +5,15 @@
     <teiHeader>
         <fileDesc>
             <titleStmt>
-                <title type="mainTitle" xml:lang="Bo-Ltn">za ma tog bkod pa</title>
-                <title type="mainTitle" xml:lang="bo">ཟ་མ་ཏོག་བཀོད་པ།</title>
                 <title type="mainTitle" xml:lang="en">The Basket’s Display</title>
                 <title type="mainTitle" xml:lang="Sa-Ltn">Kāraṇḍa­vyūha</title>
-                <title type="longTitle" xml:lang="bo">འཕགས་པ་ཟ་མ་ཏོག་བཀོད་པ་ཞེས་བྱ་བ་ཐེག་པ་ཆེན་པོའི་མདོ།</title>
-                <title type="longTitle" xml:lang="Bo-Ltn">’phags pa za ma tog bkod pa zhes bya ba theg pa chen po’i mdo</title>
+                <title type="mainTitle" xml:lang="bo">ཟ་མ་ཏོག་བཀོད་པ།</title>
+                <title type="mainTitle" xml:lang="Bo-Ltn">za ma tog bkod pa</title>
                 <title type="longTitle" xml:lang="en">The Noble Mahāyāna Sūtra “The Basket’s Display”</title>
                 <title type="longTitle" xml:lang="Sa-Ltn">Ārya­kāraṇḍa­vyūha­nāma­mahāyāna­sūtra</title>
-                <title type="otherTitle" xml:lang="zh">大乘莊嚴寶王經</title>
+                <title type="longTitle" xml:lang="bo">འཕགས་པ་ཟ་མ་ཏོག་བཀོད་པ་ཞེས་བྱ་བ་ཐེག་པ་ཆེན་པོའི་མདོ།</title>
+                <title type="longTitle" xml:lang="Bo-Ltn">’phags pa za ma tog bkod pa zhes bya ba theg pa chen po’i mdo</title>
+                <title type="otherTitle" xml:lang="zh">《大乘莊嚴寶王經》</title>
                 <author role="translatorMain" ref="contributors.xml#team-22">
                     Translated by Peter Alan Roberts with Tulku Yeshi<lb/> under the patronage and
                     supervision of 84000: Translating the Words of the Buddha</author>
@@ -26,7 +26,7 @@
                 <sponsor ref="sponsors.xml#sponsor-31">Tony Leung Chiu Wai and family</sponsor>
             </titleStmt>
             <editionStmt>
-                <edition>v 2.47.22 <date>2021</date>
+                <edition>v 2.47.23 <date>2021</date>
                 </edition>
             </editionStmt>
             <publicationStmt status="1">
@@ -60,28 +60,32 @@
             
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2022-07-01T12:20:18.471Z" user="admin">01/07/2022 12:20:18</note>
-            <tei:note type="updated" update="text-version" value="v 2.46" date-time="2019-06-18T02:52:27.743Z" user="celso">v 2.46 2019</tei:note>
+                <note type="lastUpdated" date-time="2022-07-26T04:29:49.529Z" user="admin">26/07/2022 04:29:49</note>
+                <tei:note type="updated" update="text-version" value="v 2.46" date-time="2019-06-18T02:52:27.743Z" user="celso">v 2.46 2019</tei:note>
                 <tei:note type="updated" update="text-version" value="v 2.47" date-time="2019-07-27T10:08:24.984Z" user="laura">v 2.47 2019</tei:note>
-<tei:note type="updated" update="text-version" value="v 2.47.1" date-time="2019-10-07T10:27:24.685Z" user="admin">Publication statement updated</tei:note>
-<tei:note type="updated" update="text-version" value="v 2.47.2" date-time="2019-12-20T12:56:48.575Z" user="admin">Automated version increment</tei:note>
-    <tei:note type="updated" update="text-version" value="2.47.3" date-time="2020-08-31T18:57:39.922Z" user="laura">edited acknowledgement</tei:note>
-    <tei:note type="updated" update="text-version" value="2.47.4" date-time="2020-11-23T13:57:44.998Z" user="admin">Auto (TEI migration 2.0.0)</tei:note>
-    <tei:note type="updated" update="text-version" value="2.47.5" date-time="2020-11-24T17:37:17.329Z" user="celso">Updated pending links</tei:note>
-    <tei:note type="updated" update="text-version" value="2.47.6" date-time="2020-12-11T14:06:50.919Z" user="admin">Auto (TEI migration 2.1.5)</tei:note>
-    <tei:note type="updated" update="text-version" value="2.47.7" date-time="2021-01-04T21:46:27.788Z" user="laura">Updated colophon to Bandé</tei:note>
-    <tei:note type="updated" update="text-version" value="2.47.8" date-time="2021-01-21T22:14:50.83Z" user="celso">corrected typos in Skt.</tei:note>
-    <tei:note type="updated" update="text-version" value="2.47.9" date-time="2021-01-21T22:37:41.564Z" user="celso">corrected typos in Skt.</tei:note>
-    <tei:note type="updated" update="text-version" value="2.47.10" date-time="2021-01-24T12:49:16.558Z" user="celso">corrected typos in Skt.</tei:note>
-    <tei:note type="updated" update="text-version" value="2.47.11" date-time="2021-01-28T16:22:17.876Z" user="celso">corrected Skt. in term abhutadharma</tei:note>
-    <tei:note type="updated" update="text-version" value="2.47.12" date-time="2021-02-10T21:28:41.729Z" user="celso">"pandita" to "preceptor" in colophon</tei:note>
-    <tei:note type="updated" update="text-version" value="2.47.13" date-time="2021-02-15T15:20:53.599Z" user="celso">"preceptor" to "upādhyāya" in colophon (to match glossary entry) </tei:note>
-    <tei:note type="updated" update="text-version" value="2.47.14" date-time="2021-02-25T21:12:20.473Z" user="laura">Corrected spelling error ("prophesized")</tei:note>
-    <tei:note type="updated" update="text-version" value="2.47.15" date-time="2021-04-19T19:06:53.535Z" user="laura">Corrected type in glossary ('dzam bu ling)</tei:note>
-    <tei:note type="updated" update="text-version" value="2.47.16" date-time="2021-06-07T14:48:15.515Z" user="line-tofte">Auto (update-contributors)</tei:note>
-    <tei:note type="updated" update="text-version" value="2.47.17" date-time="2021-06-07T14:49:22.832Z" user="line-tofte">Auto (update-contributors)</tei:note>
-    <tei:note type="updated" update="text-version" value="2.47.18" date-time="2021-07-17T02:17:02.408Z" user="celso">corrected Tib. spelling dge bsnyen</tei:note>
-    <tei:note type="updated" update="text-version" value="2.47.19" date-time="2021-08-05T03:39:07.74Z" user="celso">kiṃnara to kinnara</tei:note>    <tei:note type="updated" update="text-version" value="2.47.20" date-time="2022-05-13T17:12:46.165Z" user="martina-cotter">Added pending links.</tei:note>    <note type="updated" update="text-version" value="2.47.21" date-time="2022-06-27T20:30:10.566Z" user="martina-cotter">2.47.21</note>    <note type="updated" update="text-version" value="2.47.22" date-time="2022-07-01T12:20:14.485Z" user="martina-cotter">Updated passage in 2.119.</note>
+                <tei:note type="updated" update="text-version" value="v 2.47.1" date-time="2019-10-07T10:27:24.685Z" user="admin">Publication statement updated</tei:note>
+                <tei:note type="updated" update="text-version" value="v 2.47.2" date-time="2019-12-20T12:56:48.575Z" user="admin">Automated version increment</tei:note>
+                <tei:note type="updated" update="text-version" value="2.47.3" date-time="2020-08-31T18:57:39.922Z" user="laura">edited acknowledgement</tei:note>
+                <tei:note type="updated" update="text-version" value="2.47.4" date-time="2020-11-23T13:57:44.998Z" user="admin">Auto (TEI migration 2.0.0)</tei:note>
+                <tei:note type="updated" update="text-version" value="2.47.5" date-time="2020-11-24T17:37:17.329Z" user="celso">Updated pending links</tei:note>
+                <tei:note type="updated" update="text-version" value="2.47.6" date-time="2020-12-11T14:06:50.919Z" user="admin">Auto (TEI migration 2.1.5)</tei:note>
+                <tei:note type="updated" update="text-version" value="2.47.7" date-time="2021-01-04T21:46:27.788Z" user="laura">Updated colophon to Bandé</tei:note>
+                <tei:note type="updated" update="text-version" value="2.47.8" date-time="2021-01-21T22:14:50.83Z" user="celso">corrected typos in Skt.</tei:note>
+                <tei:note type="updated" update="text-version" value="2.47.9" date-time="2021-01-21T22:37:41.564Z" user="celso">corrected typos in Skt.</tei:note>
+                <tei:note type="updated" update="text-version" value="2.47.10" date-time="2021-01-24T12:49:16.558Z" user="celso">corrected typos in Skt.</tei:note>
+                <tei:note type="updated" update="text-version" value="2.47.11" date-time="2021-01-28T16:22:17.876Z" user="celso">corrected Skt. in term abhutadharma</tei:note>
+                <tei:note type="updated" update="text-version" value="2.47.12" date-time="2021-02-10T21:28:41.729Z" user="celso">"pandita" to "preceptor" in colophon</tei:note>
+                <tei:note type="updated" update="text-version" value="2.47.13" date-time="2021-02-15T15:20:53.599Z" user="celso">"preceptor" to "upādhyāya" in colophon (to match glossary entry) </tei:note>
+                <tei:note type="updated" update="text-version" value="2.47.14" date-time="2021-02-25T21:12:20.473Z" user="laura">Corrected spelling error ("prophesized")</tei:note>
+                <tei:note type="updated" update="text-version" value="2.47.15" date-time="2021-04-19T19:06:53.535Z" user="laura">Corrected type in glossary ('dzam bu ling)</tei:note>
+                <tei:note type="updated" update="text-version" value="2.47.16" date-time="2021-06-07T14:48:15.515Z" user="line-tofte">Auto (update-contributors)</tei:note>
+                <tei:note type="updated" update="text-version" value="2.47.17" date-time="2021-06-07T14:49:22.832Z" user="line-tofte">Auto (update-contributors)</tei:note>
+                <tei:note type="updated" update="text-version" value="2.47.18" date-time="2021-07-17T02:17:02.408Z" user="celso">corrected Tib. spelling dge bsnyen</tei:note>
+                <tei:note type="updated" update="text-version" value="2.47.19" date-time="2021-08-05T03:39:07.74Z" user="celso">kiṃnara to kinnara</tei:note>
+                <tei:note type="updated" update="text-version" value="2.47.20" date-time="2022-05-13T17:12:46.165Z" user="martina-cotter">Added pending links.</tei:note>
+                <note type="updated" update="text-version" value="2.47.21" date-time="2022-06-27T20:30:10.566Z" user="martina-cotter">2.47.21</note>
+                <note type="updated" update="text-version" value="2.47.22" date-time="2022-07-01T12:20:14.485Z" user="martina-cotter">Updated passage in 2.119.</note>
+                <note type="updated" update="text-version" value="2.47.23" date-time="2022-07-26T04:29:47.475Z" user="cabie-sim">Auto (update-titles)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
@@ -4152,14 +4156,13 @@
                         </gloss>
                     </item>
                     <item>
-                        <gloss type="term" xml:id="UT22084-051-004-349">
+                        <gloss xml:id="UT22084-051-004-349" type="term" mode="match">
                             <term>mahāvidyā</term>
-                            <term xml:lang="Bo-Ltn">rig pa chen po </term>
-                            <term xml:lang="bo">རིག་པ་ཆེན་པོ།</term>
+                            <term xml:lang="Bo-Ltn">rig sngags chen mo</term>
+                            <term xml:lang="bo">རིག་སྔགས་ཆེན་མོ།</term>
                             <term xml:lang="Sa-Ltn">mahāvidyā</term>
-                            <term xml:lang="Sa-Ltn">vidyāmantra</term>
-                            <term type="definition">Vidyā is synonymous with mantra. Although grammatically it is a female word,
-                                the Tibetan has it translated as a male noun.</term>
+                            <term xml:lang="Sa-Ltn">mahāvidyāmantra</term>
+                            <term type="definition">Vidyā is synonymous with mantra.</term>
                         </gloss>
                     </item>
                     <item>
