--- a/translations/kangyur/placeholders/051-005_toh117-the_basket_of_the_three_jewels.xml
+++ b/translations/kangyur/placeholders/051-005_toh117-the_basket_of_the_three_jewels.xml
@@ -4,19 +4,19 @@
     <teiHeader>
         <fileDesc>
             <titleStmt>
-                <title type="mainTitle" xml:lang="Bo-Ltn">dkon mchog gi za ma tog yi mdo/</title>
-                <title type="mainTitle" xml:lang="Sa-Ltn">ratnakāraṇḍasūtra</title>
                 <title type="mainTitle" xml:lang="en">The Basket of the [Three] Jewels</title>
-                <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa dkon mchog gi za ma tog ces bya ba theg pa chen po'i mdo</title>
+                <title type="mainTitle" xml:lang="Sa-Ltn">ratnakāraṇḍasūtra</title>
+                <title type="mainTitle" xml:lang="Bo-Ltn">dkon mchog gi za ma tog yi mdo/</title>
                 <title type="otherTitle" xml:lang="Sa-Ltn">āryaratnakāraṇḍanāmamahāyānasūtra</title>
-                <title type="otherTitle" xml:lang="zh">寶篋經 · (大正藏：大方廣寶箧經)</title>
+                <title type="otherTitle" xml:lang="zh">《寶篋經》 (大正藏：大方廣寶箧經)</title>
+                <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa dkon mchog gi za ma tog ces bya ba theg pa chen po'i mdo</title>
                 <author role="translatorMain" ref="contributors.xml#team-35"/>
                 <author role="translatorEng" ref="contributors.xml#person-207">James B. Apple Ph.D.</author>
-                <sponsor ref="sponsors.xml#sponsor-201">Angela Wong, Wong Sek Fook and Lo Mee Shiu</sponsor>
                 <consultant role="projectManager" ref="contributors.xml#person-207">James B. Apple Ph.D.</consultant>
+                <sponsor ref="sponsors.xml#sponsor-201">Angela Wong, Wong Sek Fook and Lo Mee Shiu</sponsor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.2 <date>2019</date>
+                <edition>v 0.0.3 <date>2019</date>
                 </edition>
             </editionStmt>
             <publicationStmt status="3">
@@ -35,12 +35,11 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2020-08-19T10:32:30.073Z" user="admin">19/08/2020 10:32:30</note>
-
+                <note type="lastUpdated" date-time="2022-07-26T04:31:05.198Z" user="admin">26/07/2022 04:31:05</note>
                 <note type="updated" update="text-version" value="v 0.0.1" date-time="2019-12-20T12:56:48.575Z" user="admin">Automated
                     version increment</note>
-            
-    <note type="updated" update="text-version" value="v 0.0.2" date-time="2020-08-19T10:32:28.407Z" user="admin">v 0.0.2</note>
+                <note type="updated" update="text-version" value="v 0.0.2" date-time="2020-08-19T10:32:28.407Z" user="admin">v 0.0.2</note>
+                <note type="updated" update="text-version" value="0.0.3" date-time="2022-07-26T04:30:57.502Z" user="cabie-sim">Auto (update-titles)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
