--- a/translations/kangyur/placeholders/052-001_toh119-the_sutra_of_the_great_parinirvana.xml
+++ b/translations/kangyur/placeholders/052-001_toh119-the_sutra_of_the_great_parinirvana.xml
@@ -4,27 +4,22 @@
     <teiHeader>
         <fileDesc>
             <titleStmt>
-                <title type="mainTitle" xml:lang="Bo-Ltn">yongs su mya ngan las 'das pa chen po'i mdo/</title>
-                
                 <title type="mainTitle" xml:lang="en">The Sūtra of the Great Parinirvāṇa</title>
-                <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa yongs su mya ngan las 'das pa chen po'i mdo</title>
+                <title type="mainTitle" xml:lang="Bo-Ltn">yongs su mya ngan las 'das pa chen po'i mdo/</title>
                 <title type="otherTitle" xml:lang="en">[Note: this is the long, best known, 56 fascicle version of the sūtra, translated in the early period from a Chinese version, probably the early 5th century "northern text" translation by Dharmakṣema, of which the first 10 fascicles are likely to have existed in Sanskrit but the subsequent 30 fascicles may have some other, later origin.]</title>
-                <title type="otherTitle" xml:lang="zh">大般涅槃經</title>
+                <title type="otherTitle" xml:lang="zh">《大般涅槃經》</title>
+                <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa yongs su mya ngan las 'das pa chen po'i mdo</title>
                 <author role="translatorMain" ref="contributors.xml#team-22"/>
-
-            
-<author role="translatorEng" ref="contributors.xml#person-142">Dr. Peter Alan Roberts</author>
+                <author role="translatorEng" ref="contributors.xml#person-142">Dr. Peter Alan Roberts</author>
                 <author role="translatorEng" ref="contributors.xml#person-143">Emily Bower</author>
-
-<consultant role="advisor" ref="contributors.xml#person-147">Ling-Lung Chen</consultant>
+                <consultant role="advisor" ref="contributors.xml#person-147">Ling-Lung Chen</consultant>
                 <consultant role="advisor" ref="contributors.xml#person-326">Wang Chih Pan</consultant>
-    <consultant role="projectManager" ref="contributors.xml#person-143">Emily Bower</consultant>
-
-<editor role="copyEditor" ref="contributors.xml#person-52">Tracy Davis</editor>
-    <sponsor ref="sponsors.xml#sponsor-38">Sun Ping, Tian Xingwen and Sun Fanglin</sponsor>
+                <consultant role="projectManager" ref="contributors.xml#person-143">Emily Bower</consultant>
+                <editor role="copyEditor" ref="contributors.xml#person-52">Tracy Davis</editor>
+                <sponsor ref="sponsors.xml#sponsor-38">Sun Ping, Tian Xingwen and Sun Fanglin</sponsor>
             </titleStmt>
             <editionStmt>
-                <edition>0.0.2 <date>2020</date>
+                <edition>v 0.0.3 <date>2020</date>
                 </edition>
             </editionStmt>
 
@@ -49,11 +44,11 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2020-08-19T10:34:15.631Z" user="admin">19/08/2020 10:34:15</note>
-            
-<note type="updated" update="text-version" value="0.0.1" date-time="2020-03-13T11:05:09.274Z" user="line-tofte">0.0.1</note>
-<note type="updated" update="translation-status" value="3" date-time="2020-03-13T11:05:09.274Z" user="line-tofte">3</note>
-    <note type="updated" update="text-version" value="0.0.2" date-time="2020-08-19T10:34:13.947Z" user="admin">0.0.2</note>
+                <note type="lastUpdated" date-time="2022-07-26T04:33:59.666Z" user="admin">26/07/2022 04:33:59</note>
+                <note type="updated" update="text-version" value="0.0.1" date-time="2020-03-13T11:05:09.274Z" user="line-tofte">0.0.1</note>
+                <note type="updated" update="translation-status" value="3" date-time="2020-03-13T11:05:09.274Z" user="line-tofte">3</note>
+                <note type="updated" update="text-version" value="0.0.2" date-time="2020-08-19T10:34:13.947Z" user="admin">0.0.2</note>
+                <note type="updated" update="text-version" value="0.0.3" date-time="2022-07-26T04:33:51.972Z" user="cabie-sim">Auto (update-titles)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
