--- a/translations/kangyur/placeholders/052-001_toh119-the_sutra_of_the_great_parinirvana.xml
+++ b/translations/kangyur/placeholders/052-001_toh119-the_sutra_of_the_great_parinirvana.xml
@@ -19,7 +19,7 @@
                 <sponsor ref="sponsors.xml#sponsor-38">Sun Ping, Tian Xingwen and Sun Fanglin</sponsor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.3 <date>2020</date>
+                <edition>v 0.0.4 <date>2020</date>
                 </edition>
             </editionStmt>
 
@@ -44,11 +44,12 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2022-07-26T04:33:59.666Z" user="admin">26/07/2022 04:33:59</note>
+                <note type="lastUpdated" date-time="2022-07-26T04:34:45.993Z" user="admin">26/07/2022 04:34:45</note>
                 <note type="updated" update="text-version" value="0.0.1" date-time="2020-03-13T11:05:09.274Z" user="line-tofte">0.0.1</note>
                 <note type="updated" update="translation-status" value="3" date-time="2020-03-13T11:05:09.274Z" user="line-tofte">3</note>
                 <note type="updated" update="text-version" value="0.0.2" date-time="2020-08-19T10:34:13.947Z" user="admin">0.0.2</note>
                 <note type="updated" update="text-version" value="0.0.3" date-time="2022-07-26T04:33:51.972Z" user="cabie-sim">Auto (update-titles)</note>
+                <note type="updated" update="text-version" value="0.0.4" date-time="2022-07-26T04:34:40.115Z" user="cabie-sim">Auto (update-titles)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
