--- a/translations/kangyur/translations/054-005_toh124-the_mine_of_jewels.xml
+++ b/translations/kangyur/translations/054-005_toh124-the_mine_of_jewels.xml
@@ -4,16 +4,15 @@
   <teiHeader>
     <fileDesc>
       <titleStmt>
-        <title type="mainTitle" xml:lang="Bo-Ltn">dkon mchog ’byung gnas</title>
-        <title type="mainTitle" xml:lang="bo">དཀོན་མཆོག་འབྱུང་གནས།</title>
         <title type="mainTitle" xml:lang="en">The Jewel Mine</title>
         <title type="mainTitle" xml:lang="Sa-Ltn">Ratnākara</title>
-        <title type="longTitle" xml:lang="bo">འཕགས་པ་དཀོན་མཆོག་འབྱུང་གནས་ཞེས་བྱ་བ་ཐེག་པ་ཆེན་པོའི་མདོ།</title>
-        <title type="longTitle" xml:lang="Bo-Ltn">’phags pa dkon mchog ’byung gnas zhes bya ba theg pa chen po’i
-          mdo</title>
+        <title type="mainTitle" xml:lang="bo">དཀོན་མཆོག་འབྱུང་གནས།</title>
+        <title type="mainTitle" xml:lang="Bo-Ltn">dkon mchog ’byung gnas</title>
         <title type="longTitle" xml:lang="en">The Noble Mahāyāna Sūtra “The Jewel Mine”</title>
         <title type="longTitle" xml:lang="Sa-Ltn">Ārya­ratnākara­nāma­mahāyāna­sūtra</title>
-        <title type="otherTitle" xml:lang="zh">信力入印法門經</title>
+        <title type="longTitle" xml:lang="bo">འཕགས་པ་དཀོན་མཆོག་འབྱུང་གནས་ཞེས་བྱ་བ་ཐེག་པ་ཆེན་པོའི་མདོ།</title>
+        <title type="longTitle" xml:lang="Bo-Ltn">’phags pa dkon mchog ’byung gnas zhes bya ba theg pa chen po’i mdo</title>
+        <title type="otherTitle" xml:lang="zh">《信力入印法門經》</title>
         <author role="translatorMain" ref="contributors.xml#team-9">Translated by the Dharmachakra Translation
           Committee<lb/> under the patronage and supervision of 84000: Translating the Words of the Buddha. </author>
         <editor role="externalReviewer" ref="contributors.xml#person-256">Douglas Duckworth</editor>
@@ -30,7 +29,7 @@
         <sponsor ref="sponsors.xml#sponsor-15">I. C. and F. Y. P. Cheng, their children and families</sponsor>
       </titleStmt>
       <editionStmt>
-                <edition>v 1.1.11 <date>2021</date>
+                <edition>v 1.1.13 <date>2021</date>
                 </edition>
             </editionStmt>
       <publicationStmt status="1">
@@ -66,35 +65,34 @@
         </bibl>
       </sourceDesc>
       <notesStmt>
-        <note type="lastUpdated" date-time="2021-05-05T14:45:58.958Z" user="admin">05/05/2021 14:45:58</note>
-
+        <note type="lastUpdated" date-time="2022-07-26T04:36:01.444Z" user="admin">26/07/2022 04:36:01</note>
         <note type="updated" update="text-version" value="v 0.0.1" date-time="2019-12-20T12:56:48.575Z" user="admin">Automated version increment</note>
         <note type="updated" update="translation-status" value="2.d" date-time="2020-01-28T06:12:36.889Z" user="mike">2.d</note>
         <note type="updated" update="translation-status" value="2.c" date-time="2020-03-16T14:22:39.169Z" user="line-tofte">2.c</note>
         <note type="updated" update="translation-status" value="2.b" date-time="2020-07-10T07:23:41.047Z" user="line-tofte">2.b</note>
         <note type="updated" update="translation-status" value="2.a" date-time="2020-07-10T09:46:44.764Z" user="mike">2.a</note>
-
         <note type="updated" update="text-version" value="v 0.1.1" date-time="2020-08-03T14:20:07.4Z" user="mike">v
           0.1.1</note>
         <note type="updated" update="translation-status" value="2" date-time="2020-08-03T14:20:07.4Z" user="mike">2</note>
         <note type="updated" update="text-version" value="0.1.2" date-time="2020-08-31T19:01:27.956Z" user="laura">edited acknowledgement</note>
         <note type="updated" update="text-version" value="0.1.3" date-time="2020-10-09T13:55:47.92Z" user="line-tofte">Auto (update-contributors)</note>
-      
-    <note type="updated" update="translation-status" value="1" date-time="2020-10-22T09:37:43.421Z" user="mike">1</note>
-    <note type="updated" update="text-version" value="1.0.0" date-time="2020-10-22T09:37:43.421Z" user="mike">First published version</note>
-    <note type="updated" update="text-version" value="1.1.0" date-time="2020-11-11T23:46:03.928Z" user="john">Modified first paragraph of introduction.</note>
-    <note type="updated" update="text-version" value="1.1.1" date-time="2020-11-11T23:54:10.935Z" user="john">Further edits to 1.581 and 1.588</note>
-    <note type="updated" update="text-version" value="1.1.2" date-time="2020-11-19T17:52:28.999Z" user="john">One or two minor capitalization issues.</note>
-    <note type="updated" update="text-version" value="1.1.3" date-time="2020-11-19T17:53:31.142Z" user="john">1.1.3</note>
-    <note type="updated" update="text-version" value="1.1.4" date-time="2020-11-23T13:57:44.998Z" user="admin">Auto (TEI migration 2.0.0)</note>
-    <note type="updated" update="text-version" value="1.1.5" date-time="2020-12-11T14:06:50.919Z" user="admin">Auto (TEI migration 2.1.5)</note>
-    <note type="updated" update="text-version" value="1.1.6" date-time="2020-12-24T00:11:14.787Z" user="mike">translator typo corrected</note>
-    <note type="updated" update="text-version" value="1.1.7" date-time="2021-01-04T21:48:44.524Z" user="laura">Updated colophon to Bandé</note>
-    <note type="updated" update="text-version" value="1.1.8" date-time="2021-01-21T21:59:56.525Z" user="celso">corrected typos in Skt.</note>
-    <note type="updated" update="text-version" value="1.1.9" date-time="2021-02-15T15:31:03.866Z" user="celso">"pandita" to "preceptor" in colophon</note>
-    <note type="updated" update="text-version" value="1.1.10" date-time="2021-04-26T09:06:48.112Z" user="mike">Typo fixed</note>
-                <note type="updated" update="text-version" value="1.1.11" date-time="2021-05-05T14:45:55.697Z" user="andre">Introduced one minor change in translation and Caps in dharma.</note>
-            </notesStmt>
+        <note type="updated" update="translation-status" value="1" date-time="2020-10-22T09:37:43.421Z" user="mike">1</note>
+        <note type="updated" update="text-version" value="1.0.0" date-time="2020-10-22T09:37:43.421Z" user="mike">First published version</note>
+        <note type="updated" update="text-version" value="1.1.0" date-time="2020-11-11T23:46:03.928Z" user="john">Modified first paragraph of introduction.</note>
+        <note type="updated" update="text-version" value="1.1.1" date-time="2020-11-11T23:54:10.935Z" user="john">Further edits to 1.581 and 1.588</note>
+        <note type="updated" update="text-version" value="1.1.2" date-time="2020-11-19T17:52:28.999Z" user="john">One or two minor capitalization issues.</note>
+        <note type="updated" update="text-version" value="1.1.3" date-time="2020-11-19T17:53:31.142Z" user="john">1.1.3</note>
+        <note type="updated" update="text-version" value="1.1.4" date-time="2020-11-23T13:57:44.998Z" user="admin">Auto (TEI migration 2.0.0)</note>
+        <note type="updated" update="text-version" value="1.1.5" date-time="2020-12-11T14:06:50.919Z" user="admin">Auto (TEI migration 2.1.5)</note>
+        <note type="updated" update="text-version" value="1.1.6" date-time="2020-12-24T00:11:14.787Z" user="mike">translator typo corrected</note>
+        <note type="updated" update="text-version" value="1.1.7" date-time="2021-01-04T21:48:44.524Z" user="laura">Updated colophon to Bandé</note>
+        <note type="updated" update="text-version" value="1.1.8" date-time="2021-01-21T21:59:56.525Z" user="celso">corrected typos in Skt.</note>
+        <note type="updated" update="text-version" value="1.1.9" date-time="2021-02-15T15:31:03.866Z" user="celso">"pandita" to "preceptor" in colophon</note>
+        <note type="updated" update="text-version" value="1.1.10" date-time="2021-04-26T09:06:48.112Z" user="mike">Typo fixed</note>
+        <note type="updated" update="text-version" value="1.1.11" date-time="2021-05-05T14:45:55.697Z" user="andre">Introduced one minor change in translation and Caps in dharma.</note>
+        <note type="updated" update="text-version" value="1.1.12" date-time="2022-06-27T10:06:48.1Z" user="admin">Auto (script-increment-version-published)</note>
+          <note type="updated" update="text-version" value="1.1.13" date-time="2022-07-26T04:35:53.594Z" user="cabie-sim">Auto (update-titles)</note>
+      </notesStmt>
     </fileDesc>
   </teiHeader>
   <text>
@@ -6685,15 +6683,14 @@
             </gloss>
           </item>
           <item>
-            <gloss type="person" xml:id="UT22084-054-005-862">
-              <term>Lokāyata</term>
-              <term xml:lang="Bo-Ltn">’jig rten rgyang pan pa </term>
-              <term xml:lang="bo">འཇིག་རྟེན་རྒྱང་པན་པ།</term>
-              <term xml:lang="Sa-Ltn">Lokāyata</term>
-              <term type="definition">An ancient Indian philosophical system that is based on adherence to materialism
-                and atheistic skepticism.</term>
-            </gloss>
-          </item>
+                        <gloss xml:id="UT22084-054-005-862" type="term" mode="match">
+                            <term>Lokāyata</term>
+                            <term xml:lang="Bo-Ltn">’jig rten rgyang pan pa</term>
+                            <term xml:lang="bo">འཇིག་རྟེན་རྒྱང་པན་པ།</term>
+                            <term xml:lang="Sa-Ltn">Lokāyata</term>
+                            <term type="definition">An ancient Indian philosophical system that is based on adherence to materialism and atheistic skepticism.</term>
+                        </gloss>
+                    </item>
           <item>
             <gloss type="person" xml:id="UT22084-054-005-863">
               <term>Lord of Death</term>
@@ -8190,14 +8187,14 @@
             </gloss>
           </item>
           <item>
-            <gloss type="person" xml:id="UT22084-054-005-1027">
-              <term>immeasurable contemplations</term>
-              <term xml:lang="Bo-Ltn">tshad med pa</term>
-              <term xml:lang="bo">ཚད་མེད་པ།</term>
-              <term xml:lang="Sa-Ltn">apramāṇa</term>
-              <term type="definition">See “four abodes of Brahmā.”</term>
-            </gloss>
-          </item>
+                        <gloss xml:id="UT22084-054-005-1027" type="term" mode="match">
+                            <term>immeasurable contemplations</term>
+                            <term xml:lang="Bo-Ltn">tshad med pa</term>
+                            <term xml:lang="bo">ཚད་མེད་པ།</term>
+                            <term xml:lang="Sa-Ltn">apramāṇa</term>
+                            <term type="definition">See “four abodes of Brahmā.”</term>
+                        </gloss>
+                    </item>
           <item>
             <gloss type="term" xml:id="UT22084-054-005-1028">
               <term>mindfulness</term>
